<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/primary_green"
    tools:context="com.finedine.rms.LoginActivity">

    <ImageView
        android:layout_width="306dp"
        android:layout_height="266dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_green"
        android:contentDescription="@string/todo"
        android:elevation="4dp"
        android:padding="16dp"
        android:src="@drawable/logoj" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:boxStrokeColor="@color/primary_green"
        app:hintTextColor="@color/primary_green">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_green_dark"
            android:textColorHint="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:boxStrokeColor="@color/primary_green"
        app:hintTextColor="@color/primary_green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/primary_green_dark"
            android:textColorHint="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"

        android:backgroundTint="@color/white"
        android:textColor="@color/primary_green"
        app:cornerRadius="8dp"
        android:textStyle="bold"
        android:paddingVertical="12dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/registerText"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"

        android:text="Create account"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>